--- a/footer.html
+++ b/footer.html
@@ -30,10 +30,15 @@
                 </div>
 
                 <div class="col-md-4">
-                    <h3>Reach Us</h3>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1701.2338540017417!2d79.87411038949467!3d6.
-                    939449120102272!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae259aa9e32b229%3A0x5d4db992ebb582db!2sInnovative+Cyber+Solutions+(Pvt)+Ltd.
-                    !5e0!3m2!1sen!2slk!4v1508228775391" width="100%" height="auto" frameborder="0" style="border:0; border-radius: 15px;" allowfullscreen></iframe>
+                    <h3>Products</h3>
+                    <ul class="footer-nav">
+                        <li><a href="greenleaf.html">Green Leaf</a></li>
+                        <li><a href="incytute.html">Incytute</a></li>
+                        <li><a href="incypos.html">Incypos</a></li>
+                    </ul>
+                    <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1701.2338540017417!2d79.87411038949467!3d6.-->
+                    <!--939449120102272!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae259aa9e32b229%3A0x5d4db992ebb582db!2sInnovative+Cyber+Solutions+(Pvt)+Ltd.-->
+                    <!--!5e0!3m2!1sen!2slk!4v1508228775391" width="100%" height="auto" frameborder="0" style="border:0; border-radius: 15px;" allowfullscreen></iframe>-->
                 </div>
             </div>
         </div>
