designed contact/get quote form layout

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ ga('send', 'pageview');
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script>
         $(function () {
-            $('#header').load("header.html");
+            $('#header').load("header-new.html");
             $('#footer').load("footer.html");
         });
     </script>
@@ -90,23 +90,36 @@ ga('send', 'pageview');
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <div class="fill" style="background-image:url('assets/img/products/home-bg-2.jpg');"></div>
-                    <div class="overlay"></div>
-                    <div class="carousel-caption">
-                        <div class="intro-body">
-                            <p class="brand-heading">WE</p>
-                            <br>
-                            <h1 class="brand-heading">CREATE<br/>
-                                <span class="text-primary">WEB & MOBILE</span> APPLICATIONS</h1>
-                            <hr class="light">
-                            <p>We build beautiful and elegant apps to help optimize your business process</p>
-                            <div class="page-scroll" data-scrollreveal="enter bottom after .6s">
-                                <a href="#services" class="btn btn-scroll-light sink">
-                                    <i class="fa fa-angle-double-down"></i>
-                                </a>
+                    <div class="fill" style="background-image:url('assets/img/products/home-bg-1.jpg');">
+                        <div class="container incy-services-slider" style="padding-top:150px;">
+                            <div class="col-md-1"></div>
+                            <div class="col-md-2 incy-services-card" >
+                                <img src="assets/img/icons/mobile_application_icon.png">
+                                <h4>Mobile Application</br>Development</h4>
                             </div>
+                            <div class="col-md-2 incy-services-card" >
+                                <img src="assets/img/icons/website-design-icon.png">
+                                <h4>Web Design &</br>Development</h4>
+                            </div>
+
+                            <div class="col-md-2 incy-services-card">
+                                <img src="assets/img/icons/outsourcing_icon.png">
+                                <h4>Outsourced Product</br>Development</h4>
+                            </div>
+
+                            <div class="col-md-2 incy-services-card" >
+                                <img src="assets/img/icons/offshore_staffing_icon.png">
+                                <h4>Offshore</br>Staffing</h4>
+                            </div>
+
+                            <div class="col-md-2 incy-services-card" >
+                                <img src="assets/img/icons/offshore_staffing_icon.png">
+                                <h4>Application</br>Support</h4>
+                            </div>
+                            <div class="col-md-1"></div>
                         </div>
                     </div>
+
                 </div>
                 <div class="item">
                     <div class="fill img-responsive" style="background-image:url('assets/img/products/home-bg-greenleaf.jpg');"></div>
@@ -117,11 +130,10 @@ ga('send', 'pageview');
                         </div>
                         <div class="col-md-6">
                             <div class="intro-body">
-                                <h1 class="brand-heading">Green leaf<br/>
-                                    <span class="text-primary">WEB & MOBILE</span> APPLICATIONS</h1>
-                                <a target="_blank" href='https://play.google.com/store/apps/details?id=com.incylabs.incypos&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-                                    <img style="width: 32%;" alt='Get it on Google Play'
-                                         src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
+                                <h1 class="brand-heading"><span class="text-primary">Green leaf</span><br/><hr class="light"></h1>
+                                    <p>Bought leaf collection management app <br/>for tea factories & collectors</p>
+                                <a href='#contact'>
+                                    <button class="schedule-button">Schedule a Demo</button></a>
                             </div>
                         </div>
                     </div>
@@ -135,11 +147,14 @@ ga('send', 'pageview');
                         </div>
                         <div class="col-md-6">
                             <div class="intro-body">
-                                <h1 class="brand-heading">INCYPOS<br/>
-                                    <span class="text-primary">WEB & MOBILE</span> APPLICATIONS</h1>
+                                <h1 class="brand-heading" style="font-size:50px;">
+                                    <span class="text-primary">Mobile based smart </span> <br/>restaurant POS</h1>
+                                <hr class="light">
+                                <p>A reliable & affordable POS solution that enables restaurant staff and owners to <br/>work smart.
+                                    Offline capabilities, multi device support and powerful<br/> data analytics to help take the business to next level.</p>
                                 <a target="_blank" href='https://play.google.com/store/apps/details?id=com.incylabs.incypos&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-                                <img style="width: 32%;" alt='Get it on Google Play'
-                                     src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
+                                    <img style="width: 32%;" alt='Get it on Google Play'
+                                         src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
                             </div>
                         </div>
                     </div>
@@ -153,11 +168,10 @@ ga('send', 'pageview');
                         </div>
                         <div class="col-md-6">
                             <div class="intro-body">
-                                <h1 class="brand-heading">Incytute<br/>
-                                    <span class="text-primary">WEB & MOBILE</span> APPLICATIONS</h1>
-                                <a target="_blank" href='https://play.google.com/store/apps/details?id=com.incylabs.incypos&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-                                <img style="width: 32%;" alt='Get it on Google Play'
-                                     src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
+                                <h1 class="brand-heading" style="font-size:55px;"><span class="text-primary">Incytute</span></h1>
+                                <h2>Cloud based Student Management System</h2>
+                                <a href='#contact'>
+                                    <button style="margin-top:30px;" class="schedule-button">Schedule a Demo</button></a>
                             </div>
                         </div>
                     </div>
@@ -371,7 +385,7 @@ ga('send', 'pageview');
                             <div id="success"></div>
                             <div class="row">
                                 <div class="form-group col-xs-12">
-                                    <button type="submit" class="btn btn-lg btn-primary btn-square btn-raised">Send</button>
+                                    <button type="submit" class="btn btn-lg btn-primary btn-square btn-raised schedule-button">Send</button>
                                 </div>
                             </div>
                         </form>
