--- a/header-new.html
+++ b/header-new.html
@@ -126,7 +126,7 @@
     }
 
     .header-contact-bar{
-        background-color:black;
+        background-color: #272c32;
         height:35px;
     }
 </style>
@@ -149,9 +149,11 @@ function openContactForm(evt, contactType) {
 
 <nav class="navbar navbar-fixed-top" style="padding-bottom: 0px;" role="navigation">
 
-    <div class="section header-contact-bar">
-        <div class="container">
-            <img style="height: 25px;" src="assets/img/Asset2.png">
+    <div class="section header-contact-bar hidden-sm hidden-xs">
+        <div class="container text-right">
+            <div class="col-lg-8 col-md-8 text-left" style="padding-top: 6px; color: rgba(255, 255, 255, 0.35); font-weight: lighter;">Innovative Cyber Solutions (pvt) ltd</div>
+            <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="mailto:hello@incylabs.com"><img src="assets/img/header-email.jpg" style="height:35px;"></a></div>
+            <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12"><a href="tel:+496170961709"><img src="assets/img/header-phone.jpg" style="height:35px;"></a></div>
         </div>
     </div>
 
@@ -188,7 +190,7 @@ function openContactForm(evt, contactType) {
                                     </a>
                                 </li>
                                 <li class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                                    <a href="greenleaf.html"><i></i> <span><img src="assets/img/products/greenleaflogo.png" style="width:30%"></span><br/>
+                                    <a href="greenleaf.html"><i></i> <span><img src="assets/img/products/greenleaflogo.png"></span><br/>
                                         <p>A cloud based restaurant POS application for restaurants, cafes, clubs and hotels. Runs in offline-first mode.</p>
                                     </a>
                                 </li>
