added blank pages for all the services

--- a/header-new.html
+++ b/header-new.html
@@ -172,7 +172,7 @@ function openContactForm(evt, contactType) {
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                 <ul class="nav navbar-nav pull-right">
                     <li class="menu-item main-menu-1">
-                        <a aria-expanded="true" aria-haspopup="true" class="navbar-link dropdown-toggle" data-toggle="dropdown" href="index.html">HOME</a> <span></span>
+                        <a class="navbar-link" href="index.html">HOME</a> <span></span>
                     </li>
 
                     <li class="menu-item main-menu-2 ">
@@ -207,28 +207,28 @@ function openContactForm(evt, contactType) {
                         <ul class="container dropdown-submenu dropdown-submenu-3">
                             <li class="col-lg-1 col-md-1 col-sm-12 col-xs-12"></li>
                             <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                                <a href="#"><i></i><span><img src="assets/img/icons/mobile_application_icon.png"></span><br/>
+                                <a href="mobile-application-development.html"><i></i><span><img src="assets/img/icons/mobile_application_icon.png"></span><br/>
                                     <h6>Mobile Application</br>Development</h6>
                                 </a>
 
                             </li>
                             <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                                <a href="#"><i></i> <span><img src="assets/img/icons/website-design-icon.png"></span><br/>
+                                <a href="web-design-and-development.html"><i></i> <span><img src="assets/img/icons/website-design-icon.png"></span><br/>
                                     <h6>Web Design &</br>Development</h6>
                                 </a>
                             </li>
                             <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                                <a href="#"><i></i> <span><img src="assets/img/icons/outsourcing_icon.png"></span><br/>
+                                <a href="outsourced-product-development.html"><i></i> <span><img src="assets/img/icons/outsourcing_icon.png"></span><br/>
                                     <h6>Outsourced Product</br>Development</h6>
                                 </a>
                             </li>
                             <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                                <a href="#"><i></i> <span><img src="assets/img/icons/offshore_staffing_icon.png"></span><br/>
+                                <a href="offshore-staffing.html"><i></i> <span><img src="assets/img/icons/offshore_staffing_icon.png"></span><br/>
                                     <h6>Offshore</br>Staffing</h6>
                                 </a>
                             </li>
                             <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                                <a href="#"><i></i> <span><img src="assets/img/icons/application-support-icon.png"></span><br/>
+                                <a href="application-support.html"><i></i> <span><img src="assets/img/icons/application-support-icon.png"></span><br/>
                                     <h6>Application</br>Support</h6>
                                 </a>
                             </li>
