--- a/mobile-application-development.html
+++ b/mobile-application-development.html
@@ -16,7 +16,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <meta content="" name="description">
     <meta content="" name="author">
-    <title>Carreers</title><!-- Bootstrap Core CSS -->
+    <title>Mobile Application Development</title><!-- Bootstrap Core CSS -->
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css"><!-- Fonts -->
     <link href="assets/css/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -65,7 +65,7 @@
 <body data-spy="scroll" data-target=".navbar-fixed-top" id="page-top">
 <div id="wrapper">
     <div id="header"></div>
-    <h1 style="margin-top:150px;">Carreers</h1>
+    <h1 style="margin-top:150px;">Mobile Application Development</h1>
     <div id="footer"></div><!--Footer Included-->
 </div><!-- Core JavaScript Files -->
 <script src="assets/js/jquery-1.10.2.js">
