--- a/our-work.html
+++ b/our-work.html
@@ -1,10 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Our Work</title>
-</head>
-<body>
 
+    <script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	ga('create', 'UA-68593250-1', 'auto');
+	ga('send', 'pageview');
+
+	</script>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <meta content="" name="description">
+    <meta content="" name="author">
+    <title>Our Work</title><!-- Bootstrap Core CSS -->
+    <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css"><!-- Fonts -->
+    <link href="assets/css/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'><!-- Retina Images Plugin -->
+
+    <script src="assets/js/plugins/retina/retina.min.js">
+    </script><!-- Plugin CSS -->
+    <link href="assets/css/plugins/hover/hover.min.css" rel="stylesheet">
+    <link href="assets/css/plugins/owl.carousel/owl.carousel.css" rel="stylesheet">
+    <link href="assets/css/plugins/owl.carousel/owl.theme.css" rel="stylesheet">
+    <link href="assets/css/plugins/owl.carousel/owl.transitions.css" rel="stylesheet">
+    <link href="assets/css/plugins/jquery.fs.wallpaper/jquery.fs.wallpaper.css" rel="stylesheet">
+    <link href="assets/css/plugins/magnific-popup/magnific-popup.css" rel="stylesheet"><!-- Spectrum CSS -->
+    <!-- Note: spectrum.css is the default blue theme. To use another theme, uncomment the one you want and delete the rest, including the default spectrum.css! -->
+    <link href="assets/css/spectrum.css" rel="stylesheet"><!-- <link href="assets/css/spectrum-aqua.css" rel="stylesheet"> -->
+    <!-- <link href="assets/css/spectrum-coffee.css" rel="stylesheet" -->
+    <!-- <link href="assets/css/spectrum-coral.css" rel="stylesheet"> -->
+    <!-- <link href="assets/css/spectrum-lavender.css" rel="stylesheet"> -->
+    <!-- <link href="assets/css/spectrum-olive.css" rel="stylesheet"> -->
+    <!-- <link href="assets/css/spectrum-orange.css" rel="stylesheet"> -->
+    <!-- <link href="assets/css/spectrum-peach.css" rel="stylesheet"> -->
+    <!-- <link href="assets/css/spectrum-pink.css" rel="stylesheet"> -->
+    <!-- <link href="assets/css/spectrum-purple.css" rel="stylesheet"> -->
+    <!-- <link href="assets/css/spectrum-rust.css" rel="stylesheet"> -->
+    <!-- <link href="assets/css/spectrum-seafoam.css" rel="stylesheet"> -->
+    <!-- <link href="assets/css/spectrum-slate.css" rel="stylesheet"> -->
+    <!-- <link href="assets/css/spectrum-turquoise.css" rel="stylesheet"> -->
+    <!-- <link href="assets/css/spectrum-yellow.css" rel="stylesheet"> -->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="assets/js/html5shiv.js"></script>
+    <script src="assets/js/respond.min.js"></script>
+    <script src="assets/js/common_imports.js"></script>
+    <![endif]-->
+
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js">
+    </script>
+    <script>
+	       $(function () {
+	           $('#header').load("header-new.html");
+	           $('#footer').load("footer.html");
+	       });
+	</script>
+</head>
+<body data-spy="scroll" data-target=".navbar-fixed-top" id="page-top">
+<div id="wrapper">
+    <div id="header"></div>
+    <h1 style="margin-top:150px;">Our Work</h1>
+    <div id="footer"></div><!--Footer Included-->
+</div><!-- Core JavaScript Files -->
+<script src="assets/js/jquery-1.10.2.js">
+</script>
+<script src="assets/js/bootstrap/bootstrap.min.js">
+</script>
+<script src="assets/js/modernizr.custom.js">
+</script> <!-- Plugin JavaScript Files -->
+
+<script src="assets/js/plugins/jquery.easing/jquery.easing.1.3.js">
+</script>
+<script src="assets/js/plugins/jquery.fitvids/jquery.fitvids.js">
+</script>
+<script src="assets/js/plugins/jquery.fs.wallpaper/jquery.fs.wallpaper.min.js">
+</script>
+<script src="assets/js/plugins/jquery.magnific-popup/jquery.magnific-popup.min.js">
+</script>
+<script src="assets/js/plugins/jquery.tubular/jquery.tubular.1.0.js">
+</script>
+<script src="assets/js/plugins/owl.carousel/owl.carousel.min.js">
+</script>
+<script src="assets/js/plugins/scrollReveal/scrollReveal.js">
+</script>
+<script src="assets/js/plugins/stellar/stellar.js">
+</script>
+<script src="assets/js/plugins/SmoothScroll/SmoothScroll.js">
+</script>
+<script src="assets/js/plugins/jqBootstrapValidation/jqBootstrapValidation.js">
+</script>
+<script src="assets/js/contact_me.js">
+</script>
+<script src="assets/js/plugins/isotope/isotope.pkgd.min.js">
+</script> <!-- Spectrum JavaScript Files -->
+
+<script src="assets/js/spectrum.nav.js">
+</script>
+<script src="assets/js/spectrum.js">
+</script> <!-- Script to Activate Formstone Wallpaper jQuery Plugin - Use this script if you want to use an .mp4, .ovg, or .webm video as a background video. -->
 </body>
 </html>
