--- a/header-new.html
+++ b/header-new.html
@@ -278,25 +278,25 @@ function openContactForm(evt, contactType) {
                         </div>
 
                         <div id="contact-us" class="tabcontent" style="display:block;">
-                            <form name="sentMessage" id="contactForm1" novalidate>
+                            <form name="sentMessage" id="contactForm1" method="post" action="mail/contact-us.php" novalidate>
                                 <div class="row control-group">
                                     <div class="form-group col-xs-12 floating-label-form-group controls">
                                         <label>Name</label>
-                                        <input type="text" class="form-control" placeholder="Name" id="name1" required data-validation-required-message="Please enter your name.">
+                                        <input type="text" class="form-control" placeholder="Name" name="contact-name" required data-validation-required-message="Please enter your name.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                 </div>
                                 <div class="row control-group">
                                     <div class="form-group col-xs-12 floating-label-form-group controls">
                                         <label>Email Address</label>
-                                        <input type="email" class="form-control" placeholder="Email Address" id="email1" required data-validation-required-message="Please enter your email address.">
+                                        <input type="email" class="form-control" placeholder="Email Address" name="contact-email" required data-validation-required-message="Please enter your email address.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                 </div>
                                 <div class="row control-group">
                                     <div class="form-group col-xs-12 floating-label-form-group controls">
                                         <label>Message</label>
-                                        <textarea rows="5" class="form-control" placeholder="Message" id="message1" required data-validation-required-message="Please enter a message."></textarea>
+                                        <textarea rows="5" class="form-control" placeholder="Message" name="contact-message" required data-validation-required-message="Please enter a message."></textarea>
                                         <p class="help-block text-danger"></p>
                                     </div>
                                 </div>
@@ -304,7 +304,7 @@ function openContactForm(evt, contactType) {
                                 <div id="success"></div>
                                 <div class="row">
                                     <div class="form-group col-xs-12">
-                                        <button type="submit" class="btn btn-lg btn-primary btn-square btn-raised schedule-button">Send</button>
+                                        <button id="submit" name="submit" type="submit" value="Submit" class="btn btn-lg btn-primary btn-square btn-raised schedule-button">Send</button>
                                         <button type="button" class="btn btn-lg btn-primary btn-square btn-raised schedule-button" data-dismiss="modal">Cancel</button>
                                     </div>
                                 </div>
