--- a/header-new.html
+++ b/header-new.html
@@ -312,30 +312,30 @@ function openContactForm(evt, contactType) {
                         </div>
 
                         <div id="get-quote" class="tabcontent">
-                            <form name="sentMessage" id="contactForm" novalidate>
+                            <form name="sentMessage" id="contactForm" method="post" action="mail/get-quote.php" novalidate>
                                 <div class="row control-group">
                                     <div class="form-group col-xs-12 floating-label-form-group controls">
                                         <label>Name</label>
-                                        <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                                        <input type="text" class="form-control" placeholder="Name" name="guote-name" required data-validation-required-message="Please enter your name.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                 </div>
                                 <div class="row control-group">
                                     <div class="form-group col-xs-6 floating-label-form-group controls">
                                         <label>Email Address</label>
-                                        <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                                        <input type="email" class="form-control" placeholder="Email Address" name="quote-email" required data-validation-required-message="Please enter your email address.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="form-group col-xs-6 floating-label-form-group controls">
-                                        <label>Email Address</label>
-                                        <input type="phone" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number    .">
+                                        <label>Phone Number</label>
+                                        <input type="phone" class="form-control" placeholder="Phone Number" name="quote-phone" required data-validation-required-message="Please enter your phone number    .">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                 </div>
                                 <div class="row control-group">
                                     <div class="form-group col-md-12">
-                                        <label for="inputService">Select Service</label>
-                                        <select id="inputService" class="form-control">
+                                        <label>Select Service</label>
+                                        <select name="inputService" class="form-control">
                                             <option selected>Choose Service...</option>
                                             <option>Mobile Application Development</option>
                                             <option>Web Design & Development</option>
@@ -347,8 +347,8 @@ function openContactForm(evt, contactType) {
                                 </div>
                                 <div class="row control-group">
                                     <div class="form-group col-md-6">
-                                        <label for="inputBudget">Select Budget</label>
-                                        <select id="inputBudget" class="form-control">
+                                        <label>Select Budget</label>
+                                        <select name="inputBudget" class="form-control">
                                             <option selected>Choose Budget...</option>
                                             <option>Less than $10,000</option>
                                             <option>$10,000 to $30,000</option>
@@ -358,8 +358,8 @@ function openContactForm(evt, contactType) {
                                         </select>
                                     </div>
                                     <div class="form-group col-md-6">
-                                        <label for="inputTime">Select Timeline</label>
-                                        <select id="inputTime" class="form-control">
+                                        <label>Select Timeline</label>
+                                        <select name="inputTime" class="form-control">
                                             <option selected>Choose Timeline...</option>
                                             <option>Less than 1 month</option>
                                             <option>1 to 2 months</option>
@@ -372,7 +372,7 @@ function openContactForm(evt, contactType) {
                                 <div class="row control-group">
                                     <div class="form-group col-xs-12 floating-label-form-group controls">
                                         <label>Project Explanation</label>
-                                        <textarea rows="5" class="form-control" placeholder="Explanation" id="explanation" required data-validation-required-message="Please enter a message."></textarea>
+                                        <textarea rows="5" class="form-control" placeholder="Explanation" name="explanation" required data-validation-required-message="Please enter a message."></textarea>
                                         <p class="help-block text-danger"></p>
                                     </div>
                                 </div>
