minor updates on get quote function

--- a/header-new.html
+++ b/header-new.html
@@ -277,7 +277,7 @@ function openContactForm(evt, contactType) {
                             <button class="tablinks" onclick="openContactForm(event, 'get-quote')">Get a Quote</button>
                         </div>
 
-                        <div id="contact-us" class="tabcontent" style="display:block;">
+                        <div id="contact-us" class="tabcontent" style="display:block; border: 0px !important;">
                             <form name="sentMessage" id="contactForm1" method="post" action="mail/contact-us.php" novalidate>
                                 <div class="row control-group">
                                     <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -311,7 +311,7 @@ function openContactForm(evt, contactType) {
                             </form>
                         </div>
 
-                        <div id="get-quote" class="tabcontent">
+                        <div id="get-quote" class="tabcontent" style="border: 0px !important;">
                             <form name="sentMessage" id="contactForm" method="post" action="mail/get-quote.php" novalidate>
                                 <div class="row control-group">
                                     <div class="form-group col-xs-12 floating-label-form-group controls">
