--- a/our-work.html
+++ b/our-work.html
@@ -65,7 +65,103 @@
 <body data-spy="scroll" data-target=".navbar-fixed-top" id="page-top">
 <div id="wrapper">
     <div id="header"></div>
-    <h1 style="margin-top:150px;">Our Work</h1>
+
+    <section class="portfolio-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Our Work</h2>
+                    <hr class="primary">
+                    <ul class="list-inline" id="filters">
+                        <li>
+                            <button data-filter="*" type="button" class="btn btn-link">All</button>
+                        </li>
+                        <li>
+                            <button data-filter=".web-sites" type="button" class="btn btn-link">Web Sites</button>
+                        </li>
+                        <li>
+                            <button data-filter=".web-apps" type="button" class="btn btn-link">Web Applications</button>
+                        </li>
+                        <li>
+                            <button data-filter=".mobile-apps" type="button" class="btn btn-link">Mobile Apps</button>
+                        </li>
+                        <li>
+                            <button data-filter=".incy" type="button" class="btn btn-link">Incy Products</button>
+                        </li>
+                        <li>
+                            <button data-filter=".other" type="button" class="btn btn-link">Other</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row isotope">
+                <div class="col-sm-4 portfolio-item mobile-apps">
+                    <a href="#portfolio-modal-1" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <h3>View Project</h3>
+                            </div>
+                        </div>
+                        <img src="assets/img/products/Incypos_logo_transparent.png" class="img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item mobile-apps">
+                    <a href="#portfolio-modal-2" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <h3>View Project</h3>
+                            </div>
+                        </div>
+                        <img src="assets/img/products/Incytute_small_transparent.png" class="img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item mobile-apps">
+                    <a href="#portfolio-modal-3" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <h3>View Project</h3>
+                            </div>
+                        </div>
+                        <img src="assets/img/products/greenleaflogo.png" class="img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item mobile-apps">
+                    <a href="#portfolio-modal-4" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <h3>View Project</h3>
+                            </div>
+                        </div>
+                        <img src="assets/img/products/crystal-holdings.jpg" class="img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item web-sites">
+                    <a href="www.incypos.com" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <h3>www.incypos.com</h3>
+                            </div>
+                        </div>
+                        <img src="assets/img/products/Incypos_logo_transparent.png" class="img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item example-category-3">
+                    <a href="#portfolio-modal-6" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <h3>View Project</h3>
+                            </div>
+                        </div>
+                        <img src="path/to/imgage.jpg" class="img-centered" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
     <div id="footer"></div><!--Footer Included-->
 </div><!-- Core JavaScript Files -->
 <script src="assets/js/jquery-1.10.2.js">
