created new footer layout

--- a/our-work.html
+++ b/our-work.html
@@ -58,7 +58,7 @@
     <script>
 	       $(function () {
 	           $('#header').load("header-new.html");
-	           $('#footer').load("footer.html");
+	           $('#footer').load("footer-new.html");
 	       });
 	</script>
 </head>
@@ -66,7 +66,7 @@
 <div id="wrapper">
     <div id="header"></div>
 
-    <section class="portfolio-1">
+    <section class="portfolio-1" style="min-height: -webkit-fill-available">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -95,41 +95,41 @@
                 </div>
             </div>
             <div class="row isotope">
-                <div class="col-sm-4 portfolio-item mobile-apps">
+                <div class="col-sm-4 portfolio-item mobile-apps incy">
                     <a href="#portfolio-modal-1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <h3>View Project</h3>
+                                <h3>Incypos</h3>
                             </div>
                         </div>
                         <img src="assets/img/products/Incypos_logo_transparent.png" class="img-centered" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item mobile-apps">
+                <div class="col-sm-4 portfolio-item mobile-apps incy">
                     <a href="#portfolio-modal-2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <h3>View Project</h3>
+                                <h3>Incytute</h3>
                             </div>
                         </div>
                         <img src="assets/img/products/Incytute_small_transparent.png" class="img-centered" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item mobile-apps">
+                <div class="col-sm-4 portfolio-item mobile-apps incy">
                     <a href="#portfolio-modal-3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <h3>View Project</h3>
+                                <h3>Green Leaf</h3>
                             </div>
                         </div>
                         <img src="assets/img/products/greenleaflogo.png" class="img-centered" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item mobile-apps">
+                <div class="col-sm-4 portfolio-item mobile-apps web-apps incy">
                     <a href="#portfolio-modal-4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <h3>View Project</h3>
+                                <h3>Property Leasing Manager</h3>
                             </div>
                         </div>
                         <img src="assets/img/products/crystal-holdings.jpg" class="img-centered" alt="">
@@ -142,17 +142,27 @@
                                 <h3>www.incypos.com</h3>
                             </div>
                         </div>
-                        <img src="assets/img/products/Incypos_logo_transparent.png" class="img-centered" alt="">
+                        <img src="assets/img/products/Incypos_website.png" class="img-centered" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item example-category-3">
+                <div class="col-sm-4 portfolio-item web-sites">
+                    <a href="www.wia.com" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <h3>www.wia.com</h3>
+                            </div>
+                        </div>
+                        <img src="assets/img/products/wia-logo.png" class="img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item web-apps">
                     <a href="#portfolio-modal-6" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <h3>View Project</h3>
+                                <h3>Incypos Backoffice</h3>
                             </div>
                         </div>
-                        <img src="path/to/imgage.jpg" class="img-centered" alt="">
+                        <img src="assets/img/products/Incypos_backoffice.png" class="img-centered" alt="">
                     </a>
                 </div>
             </div>
