--- a/header-new.html
+++ b/header-new.html
@@ -129,6 +129,55 @@
         background-color: #272c32;
         height:35px;
     }
+    
+    /*Mobile Menu Styles*/
+    .mobile-menu{
+        display: none;
+    }
+
+    .mobile-menu:hover{
+        display: block;
+    }
+
+    .expand-mobile-menu{
+        height: 25px;
+        float: right;
+        vertical-align:middle;
+        margin-top: 17px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding-right: 15px;
+    }
+    
+    .expand-mobile-menu:hover + .mobile-menu{
+        display: block;
+    }
+
+    .mobile-menu ul{
+        -webkit-padding-start: 0px;
+    }
+    .mobile-menu li{
+        list-style-type: none;
+        line-height: 2;
+        color: #8ac4db;
+    }
+
+    .mob-drop-1 {
+        display: none;
+    }
+
+    .mob-item-1:hover .mob-drop-1 {
+        display: block;
+    }
+
+    .mob-drop-2 {
+        display: none;
+    }
+
+    .mob-item-2:hover .mob-drop-2 {
+        display: block;
+    }
 </style>
 
 <script>
@@ -157,106 +206,147 @@ function openContactForm(evt, contactType) {
         </div>
     </div>
 
-    <div class="container" style="padding-top: 10px;">
-        <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                <i class="fa fa-bars"></i>
-            </button>
-            <a class="navbar-brand" href="#page-top">
-                        <span class="logo">
-                            <a href="index.html"><img src="assets/img/logo.png" alt=""></a>
-                        </span>
-            </a>
-        </div>
-        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-                <ul class="nav navbar-nav pull-right">
-                    <li class="menu-item main-menu-1">
-                        <a class="navbar-link" href="index.html">HOME</a> <span></span>
-                    </li>
+    <div class="col-lg-12 col-md-12 hidden-sm hidden-xs" style="padding-top: 10px;">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand" href="#page-top">
+                            <span class="logo">
+                                <a href="index.html"><img src="assets/img/logo.png" alt=""></a>
+                            </span>
+                </a>
+            </div>
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                    <ul class="nav navbar-nav pull-right">
+                        <li class="menu-item main-menu-1">
+                            <a class="navbar-link" href="index.html">HOME</a> <span></span>
+                        </li>
 
-                    <li class="menu-item main-menu-2 ">
-                        <a aria-expanded="true" aria-haspopup="true" class="navbar-link dropdown-toggle" data-toggle="dropdown" href="">OUR PRODUCTS</a> <span></span>
-                            <ul class="container dropdown-submenu dropdown-submenu-2">
-                                <li class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                                    <a href="incyPos.html"><i></i><span><img src="assets/img/products/Incypos_logo_transparent.png"></span><br/>
-                                        <p>A cloud based restaurant POS application for restaurants, cafes, clubs and hotels. Runs in offline-first mode.</p>
+                        <li class="menu-item main-menu-2 ">
+                            <a aria-expanded="true" aria-haspopup="true" class="navbar-link dropdown-toggle" data-toggle="dropdown" href="">OUR PRODUCTS</a> <span></span>
+                                <ul class="container dropdown-submenu dropdown-submenu-2">
+                                    <li class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                                        <a href="incyPos.html"><i></i><span><img src="assets/img/products/Incypos_logo_transparent.png"></span><br/>
+                                            <p>A cloud based restaurant POS application for restaurants, cafes, clubs and hotels. Runs in offline-first mode.</p>
+                                        </a>
+
+                                    </li>
+                                    <li class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                                        <a href="incytute.html"><i></i> <span><img src="assets/img/products/Incytute_small_transparent.png"></span><br/>
+                                            <p>A cloud based restaurant POS application for restaurants, cafes, clubs and hotels. Runs in offline-first mode.</p>
+                                        </a>
+                                    </li>
+                                    <li class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                                        <a href="greenleaf.html"><i></i> <span><img src="assets/img/products/greenleaflogo.png"></span><br/>
+                                            <p>A cloud based restaurant POS application for restaurants, cafes, clubs and hotels. Runs in offline-first mode.</p>
+                                        </a>
+                                    </li>
+                                    <li class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                                        <a href="property-leasing-manager.html"><i></i> <span><img src="assets/img/products/crystal-holdings.jpg"></span><br/>
+                                            <p>A cloud based restaurant POS application for restaurants, cafes, clubs and hotels. Runs in offline-first mode.</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                        </li>
+
+                        <li class="menu-item main-menu-3">
+                            <a aria-expanded="true" aria-haspopup="true" class="navbar-link dropdown-toggle" data-toggle="dropdown" href="">SERVICES</a> <span></span>
+                            <ul class="container dropdown-submenu dropdown-submenu-3">
+                                <li class="col-lg-1 col-md-1 col-sm-12 col-xs-12"></li>
+                                <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                                    <a href="mobile-application-development.html"><i></i><span><img src="assets/img/icons/mobile_application_icon.png"></span><br/>
+                                        <h6>Mobile Application</br>Development</h6>
                                     </a>
 
                                 </li>
-                                <li class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                                    <a href="incytute.html"><i></i> <span><img src="assets/img/products/Incytute_small_transparent.png"></span><br/>
-                                        <p>A cloud based restaurant POS application for restaurants, cafes, clubs and hotels. Runs in offline-first mode.</p>
+                                <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                                    <a href="web-design-and-development.html"><i></i> <span><img src="assets/img/icons/website-design-icon.png"></span><br/>
+                                        <h6>Web Design &</br>Development</h6>
                                     </a>
                                 </li>
-                                <li class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                                    <a href="greenleaf.html"><i></i> <span><img src="assets/img/products/greenleaflogo.png"></span><br/>
-                                        <p>A cloud based restaurant POS application for restaurants, cafes, clubs and hotels. Runs in offline-first mode.</p>
+                                <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                                    <a href="outsourced-product-development.html"><i></i> <span><img src="assets/img/icons/outsourcing_icon.png"></span><br/>
+                                        <h6>Outsourced Product</br>Development</h6>
                                     </a>
                                 </li>
-                                <li class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                                    <a href="greenleaf.html"><i></i> <span><img src="assets/img/products/crystal-holdings.jpg"></span><br/>
-                                        <p>A cloud based restaurant POS application for restaurants, cafes, clubs and hotels. Runs in offline-first mode.</p>
+                                <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                                    <a href="offshore-staffing.html"><i></i> <span><img src="assets/img/icons/offshore_staffing_icon.png"></span><br/>
+                                        <h6>Offshore</br>Staffing</h6>
                                     </a>
                                 </li>
+                                <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                                    <a href="application-support.html"><i></i> <span><img src="assets/img/icons/application-support-icon.png"></span><br/>
+                                        <h6>Application</br>Support</h6>
+                                    </a>
+                                </li>
+                                <li class="col-lg-1 col-md-1 col-sm-12 col-xs-12"></li>
                             </ul>
-                    </li>
+                        </li>
 
-                    <li class="menu-item main-menu-3">
-                        <a aria-expanded="true" aria-haspopup="true" class="navbar-link dropdown-toggle" data-toggle="dropdown" href="">SERVICES</a> <span></span>
-                        <ul class="container dropdown-submenu dropdown-submenu-3">
-                            <li class="col-lg-1 col-md-1 col-sm-12 col-xs-12"></li>
-                            <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                                <a href="mobile-application-development.html"><i></i><span><img src="assets/img/icons/mobile_application_icon.png"></span><br/>
-                                    <h6>Mobile Application</br>Development</h6>
-                                </a>
+                        <li class="menu-item main-menu-4 ">
+                            <a class="navbar-link"  href="our-work.html">Our work</a> <span></span>
+                        </li>
 
-                            </li>
-                            <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                                <a href="web-design-and-development.html"><i></i> <span><img src="assets/img/icons/website-design-icon.png"></span><br/>
-                                    <h6>Web Design &</br>Development</h6>
-                                </a>
-                            </li>
-                            <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                                <a href="outsourced-product-development.html"><i></i> <span><img src="assets/img/icons/outsourcing_icon.png"></span><br/>
-                                    <h6>Outsourced Product</br>Development</h6>
-                                </a>
-                            </li>
-                            <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                                <a href="offshore-staffing.html"><i></i> <span><img src="assets/img/icons/offshore_staffing_icon.png"></span><br/>
-                                    <h6>Offshore</br>Staffing</h6>
-                                </a>
-                            </li>
-                            <li class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                                <a href="application-support.html"><i></i> <span><img src="assets/img/icons/application-support-icon.png"></span><br/>
-                                    <h6>Application</br>Support</h6>
-                                </a>
-                            </li>
-                            <li class="col-lg-1 col-md-1 col-sm-12 col-xs-12"></li>
-                        </ul>
-                    </li>
+                        <li class="menu-item main-menu-5 ">
+                            <a class="navbar-link" href="customers.html">Customers</a> <span></span>
+                        </li>
 
-                    <li class="menu-item main-menu-4 ">
-                        <a class="navbar-link"  href="our-work.html">Our work</a> <span></span>
-                    </li>
+                        <li class="menu-item main-menu-6 ">
+                            <a class="navbar-link dropdown-toggle"href="careers.html">Careers</a> <span></span>
+                        </li>
 
-                    <li class="menu-item main-menu-5 ">
-                        <a class="navbar-link" href="customers.html">Customers</a> <span></span>
-                    </li>
+                        <li class="menu-item main-menu-7 ">
+                            <a class="navbar-link" href="about-us.html">About</a> <span></span>
+                        </li>
 
-                    <li class="menu-item main-menu-6 ">
-                        <a class="navbar-link dropdown-toggle"href="careers.html">Careers</a> <span></span>
-                    </li>
+                        <li class="menu-item main-menu-7 ">
+                            <a data-toggle="modal" data-target="#exampleModalCenter" class="navbar-link dropdown-toggle" href="">Get a Quote</a> <span></span>
+                        </li>
 
-                    <li class="menu-item main-menu-7 ">
-                        <a class="navbar-link" href="about-us.html">About</a> <span></span>
-                    </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 
-                    <li class="menu-item main-menu-7 ">
-                        <a data-toggle="modal" data-target="#exampleModalCenter" class="navbar-link dropdown-toggle" href="">Get a Quote</a> <span></span>
-                    </li>
-
-                </ul>
+    <!--Mobile Header-->
+    <div class="hidden-lg hidden-md col-sm-12 col-xs-12">
+        <div>
+            <div>
+                <a href="index.html"><img src="assets/img/logo.png" style="margin-top: 5px;"></a>
+            </div>
+            <div>
+                <img class="expand-mobile-menu" src="assets/img/icons/menu.png">
+                <div class="mobile-menu col-sm-12 col-xs-12 text-center">
+                    <ul>
+                       <li class="mob-item"><a href="index.html">Home</a></li>
+                       <li class="mob-item mob-item-1"><u>Our Products</u>
+                            <ul class="mob-drop mob-drop-1">
+                                <li><a href="incypos.html">Incypos</a></li>
+                                <li><a href="incytute.html">Incytute</a></li>
+                                <li><a href="greenleaf.html">Green Leaf</a></li>
+                                <li><a href="property-leasing-manager.html">Property Leasing Manager</a></li>
+                            </ul>
+                       </li>
+                       <li class="mob-item mob-item-2"><u>Services</u>
+                           <ul class="mob-drop mob-drop-2">
+                               <li><a href="mobile-application-development.html">Mobile Application Development</a></li>
+                               <li><a href="web-design-and-development.html">Web Design & Development</a></li>
+                               <li><a href="outsourced-product-development.html">Outsourced Product Development</a></li>
+                               <li><a href="offshore-staffing.html">Offshore Staffing</a></li>
+                               <li><a href="application-support.html">Application Support</a></li>
+                           </ul>
+                       </li>
+                        <li class="mob-item"><a href="our-work.html">Our Work</a></li>
+                        <li class="mob-item"><a href="customers.html">Customers</a></li>
+                        <li class="mob-item"><a href="careers.html">Careers</a></li>
+                        <li class="mob-item"><a href="about-us.html">About</a></li>
+                       <li class="mob-item">Get Quote</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
