--- a/mobile-application-development.html
+++ b/mobile-application-development.html
@@ -58,7 +58,7 @@
     <script>
 	       $(function () {
 	           $('#header').load("header-new.html");
-	           $('#footer').load("footer.html");
+	           $('#footer').load("footer-new.html");
 	       });
 	</script>
 </head>
