--- a/products.html
+++ b/products.html
@@ -65,8 +65,8 @@
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script>
         $(function () {
-            $('#header').load("header.html");
-            $('#footer').load("footer.html");
+            $('#header').load("header-new.html");
+            $('#footer').load("footer-new.html");
         });
     </script>
     <style>
